--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://dpg-csvpkb3qf0us73fv8lhg-a.oregon-postgres.render.com:5432/back_tech_db_mmdm
+spring.datasource.username=ussser
+spring.datasource.password=1XtU6j3XRO8yzLUIfz89QQjZd6b4qcWD
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.jpa.hibernate.ddl-auto=update
 spring.datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
