--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
 spring.datasource.url=jdbc:postgresql://dpg-csvpkb3qf0us73fv8lhg-a.oregon-postgres.render.com:5432/back_tech_db_mmdm
 spring.datasource.username=ussser
 spring.datasource.password=1XtU6j3XRO8yzLUIfz89QQjZd6b4qcWD
@@ -8,3 +9,5 @@ spring.datasource.jpa.hibernate.ddl-auto=update
 spring.datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema="backend-technologies"
 
+logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
