--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,18 +5,19 @@ services:
       context: .
     ports:
       - "8080:8080"
+    image: lesflqq/back-tech-project
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/postgres
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: root
-      spring_jpa_properties_hibernate_default_schema: "backend-technologies"
+      SPRING_DATASOURCE_URL: jdbc:postgresql://dpg-csvpkb3qf0us73fv8lhg-a.oregon-postgres.render.com:5432/back_tech_db_mmdm
+      SPRING_DATASOURCE_USERNAME: ussser
+      SPRING_DATASOURCE_PASSWORD: 1XtU6j3XRO8yzLUIfz89QQjZd6b4qcWD
+      SPRING_JPA_PROPERTIES_HIBERNATE_DEFAULT_SCHEMA: backend-technologies
     depends_on:
       - db
   db:
-    image: postgres:15
+    image: postgres:16
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root
+      POSTGRES_DB: back_tech_db_mmdm
+      POSTGRES_USER: ussser
+      POSTGRES_PASSWORD: 1XtU6j3XRO8yzLUIfz89QQjZd6b4qcWD
     ports:
       - "5432:5432"
