--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.3.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.3.5'
     implementation group: 'org.springframework', name: 'spring-web', version: '6.2.0'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.5'
+
     implementation 'org.mapstruct:mapstruct:1.6.2'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent
@@ -36,6 +39,11 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.5'
     implementation 'org.springframework:spring-context:6.1.14'
     implementation 'org.springframework:spring-core:6.2.0'
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
     compileOnly 'org.projectlombok:lombok'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
     // https://mvnrepository.com/artifact/org.flywaydb/flyway-core
